# github-webhook-notification.rs

./: .gitignore  Cargo.toml  README.md  SECURITY.md  gh-wbhk-tg.service
.github/workflows/: build-cross.yml  build.yml
data/: config.toml.default
example/: ping.json  push.json  sample.toml
src/: configure.rs  datastructures.rs  main.rs  test.rs
