[package]
name = "github-webhook-notification"
version = "1.0.0"
edition = "2021"

[dependencies]
actix = "0.11.0-beta.2"
actix-rt = "2.0.2"
actix-web = "4.0.0-beta.3"
anyhow = "1"
clap = "2"
env_logger = "0.8"
hmac = "0.12.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
sha2 = "0.10"
teloxide = { version = "0.5", default-features = false, features = ["rustls"] }
teloxide-macros = "0.4"
tokio = { version = "1", features = ["full"] }
toml = "0.5"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
