[package]
name = "github-webhook-notification"
version = "3.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.56"
axum = "0.5.6"
axum-server = "0.3"
clap = "3.1"
env_logger = "0.8"
hmac = "0.12"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
once_cell = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
sha2 = "0.10"
teloxide = { version = "0.9", default-features = false, features = ["rustls"] }
teloxide-macros = "0.4"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tower = "0.4"
tower-http = { version = "0.2", features = ["trace"] }

[profile.release]
lto = true
panic = "abort"

[dev-dependencies]
walkdir = "2.3"
